force-app/main/default/objects/Call_Logs_Custom__c/Call_Logs_Custom__c.object-meta.xml
<CustomObject>
    <label>Call Logs Custom</label>
    <nameField>
        <displayFormat>CLC-{0000}</displayFormat>
        <label>Call Logs Custom Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Logs Customs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>