force-app/main/default/objects/Call_Logs_Custom__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Call Logs Customs</relationshipLabel>
    <relationshipName>Call_Logs_Customs</relationshipName>
    <type>Lookup</type>
</CustomField>