force-app/main/default/objects/Call_Logs_Custom__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Call Logs Customs</relationshipLabel>
    <relationshipName>Call_Logs_Customs</relationshipName>
    <type>Lookup</type>
</CustomField>