force-app/main/default/objects/Call_Logs_Custom__c/listViews/non_business_hours_Call_Logs_Custom.listView-meta.xml
<ListView>
    <fullName>non_business_hours_Call_Logs_Custom</fullName>
    <filterScope>Queue</filterScope>
    <label>non business hours</label>
    <queue>non_business_hours</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>